<resources>
    <string name="app_name">Aurra+</string>
    <string name="action_settings">Settings</string>
    <string name="date_text">Prognoza pogody dla dnia:</string>
    <string name="weather_item_time">od %1$s do %2$s</string>
    <string name="weather_item_min">Minimalna</string>
    <string name="weateher_item_max">Maksymalna</string>
    <string name="weather_wind">Prędkość Wiatru [km/h]</string>
    <string name="weather_type_text">Typ Pogody</string>
    <string name="weather_pressure">Ciśnienie w tym czasie jest %1$s </string>
    <string name="add_date">Wprowadź datę (maksymalnie 4 dni do przodu)</string>
    <string name="add_start_hour">Wprowadź godzinę wyjścia:</string>
    <string name="add_end_hour">Wprowadź godzinę powrotu:</string>
    <string name="menu_add">Dodaj prognozę</string>
    <string name="button_save">Dodaj nową prognozę</string>
    <string name="button_date">Wybierz date</string>
    <string name="button_end">Wybierz godzine</string>
    <string name="weather_localisation">Prognoza pogody dla miasta:</string>
    <string name="sql_start">Wyjście</string>
    <string name="time_end">Powrót</string>
    <string name="sql_date">Data</string>
    <string name="sql_day">Dzien</string>
    <string name="sql_user">Tablica uzytkownika</string>
    <string name="sql_delete">Usuń</string>
    <string name="sql_table">Dodaj element</string>
    <string name="sql_all">Wszystkie</string>
    <string name="sql_monday">Poniedzialek</string>
    <string name="sql_tuesday">Wtorek</string>
    <string name="sql_wednesday">Środa</string>
    <string name="sql_thursday">Czwartek</string>
    <string name="sql_friday">Piatek</string>
    <string name="sql_saturday">Sobota</string>
    <string name="sql_sunday">Niedziela</string>
    <string name="sql_change_table">Zmień tablice</string>
    <string name="ok">Tak</string>
    <string name="cancel">Nie</string>
    <string name="home_message">Czy chcesz ustawić obecną lokalizację jako dom?</string>
    <string name="adaptation_message">Czy chcesz zaktualizować tablicę przewidywanych wyjść?</string>
</resources>
